--- a/NewsApp/NewsApp/Views/ArticleViewPage.xaml
+++ b/NewsApp/NewsApp/Views/ArticleViewPage.xaml
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="NewsApp.Views.ArticleViewPage" BackgroundColor="White" NavigationPage.HasBackButton="False">
     <NavigationPage.TitleView>
         <Label Text="Новости" Margin="0" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" TextColor="Black"  FontSize="Medium"/>
     </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout>
-            
+
             <BoxView HeightRequest="2" HorizontalOptions="FillAndExpand" BackgroundColor="#F0F0F0" IsVisible="{Binding IsSeparatorVisible}"/>
-            <SearchBar Margin="0,0,18,0"  Placeholder="Поиск" TextChanged="SearchBar_TextChanged" SearchButtonPressed="SearchBar_SearchButtonPressed"></SearchBar>
-            
+            <SearchBar Margin="0,0,0,0"  Placeholder="Поиск" TextChanged="SearchBar_TextChanged" SearchButtonPressed="SearchBar_SearchButtonPressed"></SearchBar>
+
             <ListView HasUnevenRows="True" ItemTapped="ListView_ItemTapped" SelectedItem="{Binding SelectedArticle, Mode=TwoWay}" ItemsSource="{Binding Articles}" ItemSelected="OnArticleSelected">
-                <ListView.ItemTemplate> 
+                <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Frame BorderColor="LightGray" CornerRadius="5"  Padding="0"  VerticalOptions="FillAndExpand"  HorizontalOptions="FillAndExpand">
-                               
+                            <Frame BorderColor="LightGray" Margin="0" CornerRadius="5"  Padding="0"  VerticalOptions="FillAndExpand"  HorizontalOptions="FillAndExpand">
+
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="auto"></RowDefinition>
@@ -29,12 +30,21 @@
                                     <Label Text="{Binding Author}" Grid.Row="0" Margin="5"  Grid.Column="0" TextColor="Black" MaxLines="3" LineBreakMode="WordWrap" x:Name="Author" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand"></Label>
                                     <Label Text="{Binding PublishedAt}" Grid.Row="0" Margin="5"  Grid.Column="1" x:Name="Time" VerticalOptions="StartAndExpand" HorizontalOptions="End"></Label>
                                     <Label Text="{Binding Title}" Grid.Row="1" Margin="5" Grid.ColumnSpan="2" Grid.Column="0" TextColor="Black" FontAttributes="Bold"  LineBreakMode="TailTruncation" MaxLines="2" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand"></Label>
-                                    <Image Source="{Binding ArticleImage}"  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand"></Image>
+                                    <!-- <Image Source="{Binding ArticleImage}"  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand"></Image>-->
+                                    <ffimageloading:CachedImage WidthRequest="300" HeightRequest="300" 
+                                                                IsVisible="{Binding HasImage}" BitmapOptimizations ="False" RetryDelay="250" 
+                                                                DownsampleToViewSize = "True"  Source="{Binding ArticleImage}"  
+                                                                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  
+                                                                Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
+
+                                    </ffimageloading:CachedImage>
+
+
                                 </Grid>
                             </Frame>
-                            
+
                         </ViewCell>
-                        
+
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
