--- a/NewsApp/NewsApp/Views/DatailsPage.xaml
+++ b/NewsApp/NewsApp/Views/DatailsPage.xaml
@@ -1,38 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="NewsApp.DatailsPage" Title="Новости" NavigationPage.HasBackButton="False">
     <NavigationPage.TitleView>
         <Label Text="Новости" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" TextColor="Black"  FontSize="Medium"/>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-           
-            <Grid>
-            
+
+        <Grid>
             <Grid.GestureRecognizers>
                 <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped" ></SwipeGestureRecognizer>
             </Grid.GestureRecognizers>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="0.1*" ></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="0.1*" ></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
             <Label Text="{Binding Path=Article.Author}" x:Name="Author" Grid.Row="1" Margin="5" Grid.Column="0" TextColor="Black"  VerticalOptions="StartAndExpand" HorizontalOptions="Start"></Label>
             <Label Text="{Binding Path=Article.PublishedAt}" x:Name="Time" Grid.Row="1" Margin="5"  Grid.Column="1" VerticalOptions="StartAndExpand" HorizontalOptions="End"></Label>
             <Label Text="{Binding Path=Article.Title}" Grid.Row="2" Margin="5" TextColor="Black" FontAttributes="Bold" Grid.ColumnSpan="2" LineBreakMode="WordWrap" Grid.Column="0" x:Name="Title" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand"></Label>
             <Label Text="{Binding Path=Article.Content}" Grid.Row="3" Margin="5" TextColor="Black" Grid.ColumnSpan="2" LineBreakMode="WordWrap" Grid.Column="0" x:Name="ContentNews" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand"></Label>
-            <Image Source="{Binding Path=Article.ArticleImage}" Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Aspect="AspectFill"  HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" x:Name="Image"></Image>
+            <!--<Image Source="{Binding Path=Article.ArticleImage}" Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Aspect="AspectFill"  HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" x:Name="Image"></Image>-->
+            <ffimageloading:CachedImage HeightRequest="300" WidthRequest="300"
+                                        Source="{Binding Article.ArticleImage}" IsVisible="{Binding Article.HasImage}" 
+                                        BitmapOptimizations ="False" RetryDelay="250" DownsampleToViewSize = "True"  
+                                        Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"  
+                                        Aspect="AspectFit" HorizontalOptions="FillAndExpand" 
+                                        VerticalOptions="StartAndExpand">
+            </ffimageloading:CachedImage>
             <Button Grid.Row="4" Margin="2" Grid.ColumnSpan="2" Command="{Binding OpenBrowser}" BackgroundColor="DimGray" TextColor="White" VerticalOptions="End" HorizontalOptions="Fill" Text="Читать полностью"></Button>
         </Grid>
 
-            
-        
+
+
     </ContentPage.Content>
 </ContentPage>
