--- a/NewsApp/NewsApp/App.xaml
+++ b/NewsApp/NewsApp/App.xaml
@@ -1,13 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:NewsApp.Controls"
              x:Class="NewsApp.App" >
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#159624</Color>
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor" Value="White"></Setter>
                 <Setter Property="BarTextColor" Value="Blue"></Setter>
+            </Style>
+            <Style x:Key="ErrorTextStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="Red" />
+                <Setter Property="FontSize" Value="12" />
+            </Style>
+            <Style x:Key="EntryStyle" TargetType="controls:StandardEntry">
+                <!--  <Setter Property="BorderColor" Value="#E5E5E5" />-->
+                <Setter Property="CornerRadius" Value="3"></Setter>
+                <Setter Property="BorderThickness" Value="1"></Setter>
+                <Setter Property="PlaceholderColor" Value="LightGray"></Setter>
+                <Setter Property="BackgroundColor" Value="White"></Setter>
+                <Setter Property="TextColor" Value="Black"></Setter>
+                <Setter Property="Padding" Value="10"></Setter>
+                <Setter Property="Margin" Value="5"></Setter>
+
+            </Style>
+            <Style x:Key="LoginStyleButton" TargetType="Button">
+                <Setter Property="Margin" Value="5" ></Setter>
+                <Setter Property="BackgroundColor" Value="#3D3D3D"></Setter>
+                <Setter Property="TextColor" Value="White"></Setter>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
